<resources>
    <string name="app_name">Catty</string>
    <string name="app_ver">Android Pemula Submission Dicoding</string>

    <string name="title_home">Cat Breeds</string>
    <string name="title_profile">About Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_info">Credit</string>
    <string name="lbl_education">Education History</string>
    <string name="tv_email">ramadhanbhg@gmail.com</string>
    <string name="tv_name">Unero Bhagaskara Ramadhan Marbun</string>
    <string name="lbl_thx_icon">Icon</string>
    <string name="lbl_thx_data">Data</string>
    <string name="lbl_size_weight">Size and Weight</string>
    <string name="lbl_overview">Overview</string>
    <string name="lbl_history">History</string>
    <string name="cat_photo">Cat Photo</string>
    <string name="school_logo">School Logo</string>
    <string name="purina">PURINA</string>
    <string name="wikipedia">WIKIPEDIA</string>
    <string name="flaticon">Flaticon</string>
    <string name="flatpak">Flatpak</string>
    <string name="logo_app">Logo App</string>

</resources>