<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.info.InfoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            app:navigationIcon="@mipmap/launcher_foreground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/cedarville_cursive"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/lbl_thx_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_thx_data"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="34sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/resource1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/purina"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>

        <ImageView
            android:src="@drawable/resource2"
            android:scaleType="fitCenter"
            android:layout_width="150dp"
            android:contentDescription="@string/wikipedia"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_thx_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_thx_icon"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="34sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/resource3"
            android:scaleType="fitCenter"
            android:layout_width="150dp"
            android:contentDescription="@string/flaticon"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>

        <ImageView
            android:src="@drawable/resource4"
            android:scaleType="fitCenter"
            android:layout_width="150dp"
            android:contentDescription="@string/flatpak"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>
    </LinearLayout>

</LinearLayout>